@@ -71,6 +71,15 @@ class Gravity_Flow_Entry_Editor {
 	private $_display_fields = array();
 
 	/**
+	 * An array of field IDs required for use with calculations.
+	 *
+	 * @since 1.7.1-dev
+	 *
+	 * @var array
+	 */
+	private $_calculation_dependencies = array();
+
+	/**
 	 * The content to be displayed for the display fields.
 	 *
 	 * @var array
@@ -272,6 +281,7 @@ class Gravity_Flow_Entry_Editor {
 
 		$dynamic_conditional_logic_enabled = $this->_is_dynamic_conditional_logic_enabled;
 
+		/* @var GF_Field $field */
 		foreach ( $form['fields'] as $key => $field ) {
 			if ( $field->type == 'page' ) {
 				unset( $form['fields'][ $key ] );
@@ -279,6 +289,10 @@ class Gravity_Flow_Entry_Editor {
 			}
 
 			$is_applicable_field = $this->is_editable_field( $field );
+
+			if ( $is_applicable_field && $field->has_calculation() ) {
+				$this->set_calculation_dependencies( $field->calculationFormula );
+			}
 
 			if ( ! $is_applicable_field ) {
 				// Populate the $_display_fields array.
@@ -296,6 +310,44 @@ class Gravity_Flow_Entry_Editor {
 	}
 
 	/**
+	 * Add the IDs of any fields in the formula to the $_calculation_dependencies array.
+	 *
+	 * @since 1.7.1-dev
+	 *
+	 * @param string $formula The calculation formula to be evaluated.
+	 */
+	public function set_calculation_dependencies( $formula ) {
+		if ( empty( $formula ) ) {
+			return;
+		}
+
+		preg_match_all( '/{[^{]*?:(\d+).*?}/mi', $formula, $matches, PREG_SET_ORDER );
+		if ( ! empty( $matches ) ) {
+			foreach ( $matches as $match ) {
+				$field_id = rgar( $match, 1 );
+				if ( $field_id && ! $this->is_calculation_dependency( $field_id ) ) {
+					$this->_calculation_dependencies[] = $field_id;
+				}
+			}
+		}
+	}
+
+	/**
+	 * Checks whether a field is required for calculations.
+	 *
+	 * @since 1.7.1-dev
+	 *
+	 * @param GF_Field|string $field The field object or field ID to be checked.
+	 *
+	 * @return bool
+	 */
+	public function is_calculation_dependency( $field ) {
+		$field_id = is_object( $field ) ? $field->id : $field;
+
+		return in_array( $field_id, $this->_calculation_dependencies );
+	}
+
+	/**
 	 * Determines if the field can be removed from the form object.
 	 *
 	 * Fields involved in conditional logic must always be added to the form.
@@ -305,7 +357,7 @@ class Gravity_Flow_Entry_Editor {
 	 * @return bool
 	 */
 	public function can_remove_field( $field ) {
-		$can_remove_field = ! ( $this->is_editable_field( $field ) || $this->is_display_field( $field ) ) && empty( $field->conditionalLogicFields );
+		$can_remove_field = ! ( $this->is_editable_field( $field ) || $this->is_display_field( $field ) || $this->is_calculation_dependency( $field ) ) && empty( $field->conditionalLogicFields );
 
 		return $can_remove_field;
 	}
@@ -415,19 +467,18 @@ class Gravity_Flow_Entry_Editor {
 
 		$value = RGFormsModel::get_lead_field_value( $this->entry, $field );
 
-		$dynamic_conditional_logic_enabled = $this->_is_dynamic_conditional_logic_enabled;
+		$conditional_logic_dependency = $this->_is_dynamic_conditional_logic_enabled && ! empty( $field->conditionalLogicFields );
 
-		if ( $dynamic_conditional_logic_enabled ) {
-			if ( ! empty( $field->conditionalLogicFields ) ) {
-				$field_input = $field->get_field_input( $this->form, $value, $this->entry );
-				$html        = '<div style="display:none;">' . $field_input . '</div>';
-			}
+		if ( $conditional_logic_dependency || $this->is_calculation_dependency( $field ) ) {
+			$html = $field->get_field_input( $this->form, $value, $this->entry );
 		}
 
 		if ( ! $this->is_display_field( $field ) ) {
 
 			return $html;
 		}
+
+		$html = '<div style="display:none;">' . $html . '</div>';
 
 		$value = $this->maybe_get_product_calculation_value( $value, $field );
 
@@ -640,7 +691,7 @@ class Gravity_Flow_Entry_Editor {
 		}
 
 		if ( $this->is_hidden_field( $field ) ) {
-			$field_container = sprintf( '<li style="display:none;">%s</li>', $this->_non_editable_field_content[ $field->id ] );
+			$field_container = sprintf( '<li id="field_%s_%s" style="display:none;">%s</li>', $field->formId, $field->id, $this->_non_editable_field_content[ $field->id ] );
 		}
 
 		return $field_container;
